--- a/CountryInformationService/src/main/resources/application.properties
+++ b/CountryInformationService/src/main/resources/application.properties
@@ -11,6 +11,11 @@ management.endpoint.camelroutes.enabled = true
 management.endpoint.camelroutes.read-only = true
 spring.main.allow-circular-references=true
 
+
+# scan only in the com/foo/routes classpath
+#camel.springboot.routes-include-pattern = classpath:routes/*.xml
+#camel.main.routes-include-pattern=classpath:spring/*
+
 # configure resilience4j
 # when we have more than 5 requests per 10 seconds that 50%+ fails
 # then open circuit and call fallback immediately
