--- a/CountryInformationService/src/main/resources/application.properties
+++ b/CountryInformationService/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 # the name of Camel
 camel.springboot.name = CountryInformationService-Camel
-#camel.component.servlet.mapping.context-path=/services/*
-camel.servlet.mapping.context-path=/services/*
+camel.servlet.mapping.context-path=/api/*
 # expose actuator endpoint via HTTP
 management.endpoints.web.exposure.include=info,health,camelroutes
 # turn on actuator health check
