--- a/CountryInformationClient/src/main/resources/application.properties
+++ b/CountryInformationClient/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # the name of Camel
-camel.springboot.name = CountryInformationService-Camel
-camel.servlet.mapping.context-path=/api/*
+camel.springboot.name = CountryInformationClient-Camel
+camel.servlet.mapping.context-path=/client/*
 # expose actuator endpoint via HTTP
 management.endpoints.web.exposure.include=info,health,camelroutes
 # turn on actuator health check
@@ -26,11 +26,8 @@ camel.resilience4j.failure-rate-threshold=50
 camel.resilience4j.wait-duration-in-open-state=20
 
 
-#Service Configurations
-countryinfo.service.endpoint=http://webservices.oorsprong.org/websamples.countryinfo/CountryInfoService.wso
-countryinfo.service.responseTimeout=5000
+server.port=9092
 
-server.port=9091
-
-spring.application.name=countryinformationservice
+spring.application.name=countryinformationclient
+spring.cloud.loadbalancer.ribbon.enabled=false
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
