Working code after Discovery Client with Eureka server

--- a/CountryInformationClient/src/main/resources/application.properties
+++ b/CountryInformationClient/src/main/resources/application.properties
@@ -31,3 +31,5 @@ server.port=9092
 spring.application.name=countryinformationclient
 spring.cloud.loadbalancer.ribbon.enabled=false
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+camel.cloud.service-discovery.services[cis]=localhost:9001
