Added Zipkin Tracing

--- a/CountryInformationService/pom.xml
+++ b/CountryInformationService/pom.xml
@@ -179,6 +179,10 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.camel.springboot</groupId>
+			<artifactId>camel-zipkin-starter</artifactId>
+		</dependency>
 
 		<!-- Test -->
 		<dependency>
@@ -194,6 +198,23 @@
 		<dependency>
 			<groupId>org.apache.camel.springboot</groupId>
 			<artifactId>camel-http-starter</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.camel.springboot</groupId>
+			<artifactId>camel-zipkin-starter</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>io.zipkin.reporter2</groupId>
+			<artifactId>zipkin-reporter-spring-beans</artifactId>
+			<version>2.16.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.zipkin.reporter2</groupId>
+			<artifactId>zipkin-sender-okhttp3</artifactId>
+			<version>2.16.4</version>
 		</dependency>
 	</dependencies>
 
