--- a/CountryInformationService/src/main/resources/application.properties
+++ b/CountryInformationService/src/main/resources/application.properties
@@ -34,3 +34,9 @@ server.port=9001
 
 spring.application.name=countryinformationservice
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+#Zipkin
+camel.zipkin.endpoint=http://localhost:9411/api/v2/spans
+camel.zipkin.service-name=CountryInformationService-Camel
+camel.zipkin.server-service-mappings.mockClientGetAll=getAll
+camel.zipkin.server-service-mappings.mockGetById=getById
