--- a/ribbon-gateway/src/main/resources/application.properties
+++ b/ribbon-gateway/src/main/resources/application.properties
@@ -38,3 +38,9 @@ server.port=9000
 #service.name=cis
 camel.cloud.service-discovery.services[cis]=localhost:9001
 camel.cloud.ribbon.properties[ServerListRefreshInterval] = 250
+
+#Zipkin
+camel.zipkin.endpoint=http://localhost:9411/api/v2/spans
+camel.zipkin.service-name=ribbon-gateway-Camel
+camel.zipkin.server-service-mappings.mockClientGetAll=getAll
+camel.zipkin.server-service-mappings.mockGetById=getById
