--- a/ribbon-gateway/pom.xml
+++ b/ribbon-gateway/pom.xml
@@ -111,6 +111,25 @@
 			<artifactId>camel-http</artifactId>
 			<version>3.16.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.camel.springboot</groupId>
+			<artifactId>camel-zipkin-starter</artifactId>
+		</dependency>
+
+
+		<dependency>
+			<groupId>io.zipkin.reporter2</groupId>
+			<artifactId>zipkin-reporter-spring-beans</artifactId>
+			<version>2.16.4</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.zipkin.reporter2</groupId>
+			<artifactId>zipkin-sender-okhttp3</artifactId>
+			<version>2.16.4</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
